# NovaNas

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  biome.json  go.mod  go.sum  go.work  go.work.sum  nx.json  package.json  pnpm-lock.yaml  renovate.json  sqlc.yaml  tsconfig.base.json
.github/workflows/: ci.yml  e2e.yml  os-build.yml  perf-gate.yml  perf-nightly.yml  publish-charts.yml  release.yml  s3-compat-nightly.yml  sdk-gen.yml  storage-spdk.yml
api/: openapi.yaml
apps/: README.md  index.yaml
apps/adguard-home/: metadata.yaml
apps/bazarr/: metadata.yaml
apps/code-server/: metadata.yaml
apps/duplicati/: metadata.yaml
apps/emby/: metadata.yaml
apps/filebrowser/: metadata.yaml
apps/frigate/: metadata.yaml
apps/gitea/: metadata.yaml
apps/grafana/: metadata.yaml
apps/home-assistant/: metadata.yaml
apps/immich/: metadata.yaml
apps/jellyfin/: metadata.yaml
design-files/: NovaNas UI.html  styles.css
design_handoff_novanas_v2/: NovaNAS V2.html  README.md
dev/: README.md  docker-compose.yml  keycloak-realm.json  openbao-init.sh  prometheus.yml
docs/: 01-architecture-overview.md  02-storage-architecture.md  03-access-protocols.md  04-tenancy-isolation.md  05-crd-reference.md  05-resource-reference.md  06-boot-install-update.md  07-disk-lifecycle.md  08-apps-and-vms.md  09-ui-and-api.md  10-identity-and-secrets.md  11-networking.md  12-observability.md  13-build-and-release.md  14-decision-log.md  15-implementation-plan.md  15-installer.md  16-data-meta-frontend.md  CRD-CONSOLIDATION-PLAN.md  CRD-REMOVAL-PLAN.md  README.md
e2e/: Makefile  README.md  go.mod  package.json  playwright.config.ts  tsconfig.json
hack/: README.md  bootstrap.sh
helm/: Chart.yaml  README.md  values.schema.json  values.yaml
installer/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  reboot_linux.go  reboot_other.go
installer-di/: .gitignore  build-installer-iso.sh  grub-installer.cfg  late_command.sh  partman-recipe.txt  preseed.cfg
os/: .gitignore  Makefile  README.md  mkosi.conf  mkosi.postinst  mkosi.postinst.chroot  mmdebstrap.conf
perf/: README.md  baseline.csv  compare.py
proto/: .gitignore  README.md  buf.gen.yaml  buf.yaml
scripts/: gen-openapi.sh  gen-ts-client.sh  nova-reconcile-ip-redirects-watcher.sh  nova-reconcile-ip-redirects.sh
storage/: .gitignore  Makefile  README.md  go.mod  go.sum
storage/dataplane/nbd/: Cargo.toml
storage/dataplane/nbd/src/: protocol.rs  server.rs
storage/dataplane/nbd/tests/: server_test.rs
storage/dataplane/nvmeof-tcp/: Cargo.toml
storage/dataplane/nvmeof-tcp/src/: target.rs
storage/frontend/: Cargo.toml  Dockerfile.build  build.rs
storage/frontend/proto/: chunk.proto  meta.proto
storage/frontend/src/: api_subscriber.rs  chunk_engine.rs  chunk_map_cache.rs  error.rs  lib.rs  main.rs  meta_client.rs  ndp_client.rs  nvmf.rs  open_chunk.rs  proto.rs  reconciler.rs  spdk_nvmf.rs  spdk_wrapper.h  uring_wrapper.c  volume_bdev.rs  write_cache.rs
storage/frontend/src/spdk/: bdev_manager.rs  context.rs  env.rs  mod.rs  reactor_dispatch.rs  volume_bdev.rs
storage/frontend/tests/: api_subscriber.rs  chunk_engine.rs  meta_client.rs
storage/meta/: Cargo.toml  build.rs
storage/meta/src/: api_client.rs  crush.rs  lib.rs  main.rs  policy.rs  server.rs  store.rs  topology.rs  types.rs
storage/meta/tests/: api_subscriber.rs  grpc_smoke.rs  store_invariants.rs
web/: .env  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+1484 files in other folders)
