[package]
name = "novanas-frontend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "NovaNas hot-path frontend daemon: NVMe-oF target + volume bdev"

[features]
default = []
spdk-sys = []

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crc32c = "0.6"
dashmap = "6"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
ndp = { package = "novanas-ndp", path = "../dataplane/ndp" }
prost = "0.13"
prost-types = "0.13"
redb = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "macros", "net", "io-util", "time", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.13", features = ["transport"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[build-dependencies]
tonic-build = "0.13"
bindgen = "0.71"
cc = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
