[package]
name = "novanas-nvmeof-tcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "nvmeof_tcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros"] }
log = "0.4"
thiserror = "2"
bytes = "1"
crc32c = "0.6"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
env_logger = "0.11"
